<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background = "@drawable/beach" >    
    

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="92dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:typeface="serif"
        android:textSize="25sp" >

    </TextView>
	    
	    <EditText
	        android:id="@+id/username"
	        android:hint="@string/username"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal|center_vertical"
	        android:ems="10" >
	
	        <requestFocus android:layout_width="match_parent" />

	    </EditText>
	    <EditText
	        android:id="@+id/password"
	        android:hint="@string/password"
	        android:inputType="textPassword"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal|center_vertical"
	        android:ems="10" >
	    </EditText>

	    <Button
	        android:id="@+id/submitbutton"
	        android:text="@string/login"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:onClick="loginAttemptButton" >
</Button>
	   
</LinearLayout>
