<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.meditation.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:text="@string/welcome_text"
        android:textColor="#000"
        android:typeface="monospace" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:typeface="sans"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/begin_call" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:onClick="quitApp"
        android:text="@string/exit" />

</RelativeLayout>